--- a/app/stickers/templates/stickers/sticker_list.html
+++ b/app/stickers/templates/stickers/sticker_list.html
@@ -1,6 +1,6 @@
 {% extends 'explorer/base.html' %}
 
-{% load i18n staticfiles explorer_utils %}
+{% load i18n static explorer_utils %}
 
 {% block title %}{% trans "Your Stickers" %}{% endblock %}
 {% block ribbon %}{% endblock %}
