--- a/app/explorer/templates/explorer/challenge-failed.html
+++ b/app/explorer/templates/explorer/challenge-failed.html
@@ -6,8 +6,9 @@
 {% block main-body %}
 <div class="centre-container">
   <h1>{% trans "Bad news! " %}</h1>
-    <p>{% blocktrans %}Serol wasn't able to get you a picture. Let's give {{object}} another try!{% endblocktrans %}</p>
-    <p><a href="{% url 'retry' object.pk %}" class="btn btn-lg btn-4 btn-4a animated tada" id="start-btn">{% trans 'Retry the challenge' %}</a></p>
+    <p>Serol wasn't able to get you a picture of <strong>{{progress.target}}</strong>.</p>
+    <p>Let's give "{{progress.challenge.name}}" another try!</p>
+    <p><a href="{% url 'retry' object.pk %}" class="button blue-bg white is-rounded" id="start-btn">{% trans 'Retry the challenge' %}</a></p>
   </div>
 
 {% endblock %}
