--- a/app/explorer/templates/explorer/challenge-identify.html
+++ b/app/explorer/templates/explorer/challenge-identify.html
@@ -11,7 +11,7 @@ var success_text = "{% trans "Correct!" %}";
 var images = Array();
 var current_tag = "{{object.avm_code}}";
 var redirect_url = "{% url 'analyse' object.id %}?frameid="+{{ progress.frameids }};
-var requestid = {{ progress.requestid }};
+var requestid = {{ progress.requestid|safe }};
 var frameid = {{ progress.frameids }};
 var my_image_url {% if progress.image_file %} = "{{ progress.image_file.url|safe }}"{% endif %};
 
@@ -62,7 +62,7 @@ $(document).ready(function(){
         {% for i in "0123" %}
         <div class="column is-half pb-2 identify-image">
           <figure class="image">
-          <img src="{% static 'explorer/images/placeholder.jpg' %}" alt="" class="identify-image rounded-corners" id="img-{{i}}" data-mine="">
+          <img src="{% static 'explorer/images/placeholder.jpg' %}" alt="" class="identify-image rounded-corners" id="img-{{i}}" data-mine="" onerror="this.onerror=null;this.src='{% static 'explorer/images/placeholder.jpg' %}';">
           <div class="identify-answer" id="ans-{{i}}" style="display:none;"></div>
           </figure>
         </div>
