--- a/app/explorer/templates/explorer/project_complete.html
+++ b/app/explorer/templates/explorer/project_complete.html
@@ -10,7 +10,7 @@
         <h1>{% trans "Project Complete!" %}</h1>
         <div id="celebrationserol"></div>
     </div>
-    <div class="container">
+    <div class="container has-text-centered">
           <p class="statement">{% trans "You have reached the end of Serol's Cosmic Explorer missions!" %}</p>
           <p class="statement">{% trans "Have a look back at all of your" %} <a href="{% url 'stickers' %}">{% trans "challenges and cosmic pictures!" %}</a> </p>
       </div>
