--- a/app/explorer/templates/explorer/home.html
+++ b/app/explorer/templates/explorer/home.html
@@ -65,6 +65,12 @@ serolanim = lottie.loadAnimation(serolStatus);
 </div>
 </section>
 
+<section class="section green-bg py-4">
+  <div class="container">
+    <p class="has-text-centered statement m-0"><span class="tag is-warning">new</span> <a href="{% url 'challenge' 15 %}" class="white">Explore the Moon with our new challenge</a></p>
+    </div>
+</section>
+
 <section class="section focus-home">
   <div class="container">
     <h1 class="has-text-centered">{% trans "Investigate the Universe using Las Cumbres Observatory" %}</h1>
