Fixing submission Problems

--- a/app/explorer/templates/explorer/challenge-observe.html
+++ b/app/explorer/templates/explorer/challenge-observe.html
@@ -71,7 +71,7 @@ var csrftoken = '{{ csrf_token }}';
 var challenge_id = '{{object.id}}'
 var redirect_url = "{% url 'challenge' object.id %}";
 var image_file = image_files[category];
-var whatsupurl = "https://whatsup.lco.global/range/?aperture=0m4&format=jsonp";
+var whatsupurl = "https://whatsup.lco.global/range/?aperture=0m4&format=jsonp&full=best";
 var target_type;
 
 function add_targets(i, data){
