--- a/app/explorer/templates/explorer/home.html
+++ b/app/explorer/templates/explorer/home.html
@@ -104,7 +104,7 @@ serolanim = lottie.loadAnimation(serolStatus);
 <section class="section">
   <div class="container">
     <figure class="image is-16by9">
-    <iframe class="has-ratio" width="560" height="315" src="https://www.youtube.com/embed/Pq9dr9ICOl8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="has-ratio" width="560" height="315" src="https://www.youtube.com/embed/HGZlJJ_-Hv4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </figure>
   </div>
   </section>
