Adding contact form

--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -120,10 +120,11 @@
             <div class="column is-half">
               <div class="content">
               <ul>
-                <li><a href="/videos/">Serol Movies</a></li>
+                <li><a href="{% url 'videos' %}">Serol Movies</a></li>
                 <li><a href="https://lco.global/about/">About Las Cumbres Observatory</a></li>
                 <li><a href="https://lco.global/education/">Education projects from LCO</a></li>
                 <li><a href="https://lco.global/observatory/privacy-policy/">Data Use &amp; Privacy</a></li>
+                <li><a href="{% url 'feedback' %}">Contact Us</a></li>
               </div>
             </div>
           </div>
