--- a/explorer/templates/registration/password_reset_form.html
+++ b/explorer/templates/registration/password_reset_form.html
@@ -9,7 +9,7 @@
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    <input type="submit" value="Send me instructions!" class="button is-primary">
   </form>
 </div>
 {% endblock %}
