--- a/notify/templates/notify/mail_message.html
+++ b/notify/templates/notify/mail_message.html
@@ -59,17 +59,10 @@
    </td>
   </tr>
   <tr>
-   <td style="padding: 0 0 0 0;">
-   	<div style="text-align:center">
-      <img src="{{image_url|safe}}" alt="Your image of {{ target }}" width="600" />
-   </div>
-   </td>
-  </tr>
-  <tr>
    <td style="padding: 20px 0 20px 0;">
    	<div style="text-align:center">
    	<p style="font-family:verdana">
-    Have a closer look at it on Serol's Cosmic Explorers and complete Challenge {{ challenge }} from "{{ mission_name }}"!
+    Have a look at it on Serol's Cosmic Explorers and complete Challenge {{ challenge }} from "{{ mission_name }}"!
 	</p>
 	</div>
    </td>
