Adding offline messages

--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -15,7 +15,7 @@ $(document).ready(function(){
   }
   var ca = getCookie('lco_fb_serol');
   if (ca == null){
-    $('#surveyModal').modal('show');
+    $('#surveyModal').show();
   }
 
 });
