--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -153,6 +153,7 @@
       $.getJSON('/api/messages/remove/?callback=serol', function(data){
           console.log("DONE ");
           $('#message-alert').html('<i class="far fa-bell"></i>')
+          $('.messages').html()
         })
         .fail(function(data){
           console.log("FAIL ", data);
