--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -266,7 +266,7 @@ $(document).ready(function(){
   <div class="modal-card">
     <header class="modal-card-head">
       <p class="modal-card-title"></p>
-      <button class="delete" aria-label="close" class="cancel_button"></button>
+      <button class="delete cancel_button" aria-label="close"></button>
     </header>
     <section class="modal-card-body">
       <article class="media mb-5">
