--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -118,7 +118,7 @@ serolanim = lottie.loadAnimation(serolAnim);
 <section class="section">
   <div class="container">
     <figure class="image is-16by9">
-    <iframe class="has-ratio" width="560" height="315" src="https://www.youtube.com/embed/HGZlJJ_-Hv4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class="has-ratio" width="560" height="315" src="https://www.youtube.com/embed/obwHTXG0dr8" title="Serol teaser" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </figure>
   </div>
   </section>
