--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block script-content %}
-<script src="{% static 'explorer/js/utils.js' %}" ></script>
+<script src="{% static 'explorer/js/utils.js' %}?2" ></script>
 <script>
 
 var serolStatus = {
