Fix highscore; template tweaks

--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -105,10 +105,10 @@ serolanim = lottie.loadAnimation(serolAnim);
       </div>
       <div class="column is-flex is-align-items-center">
         <div class="buttons">
-        <a class="button is-rounded is-large is-fullwidth mb-5 register-ind" href="{% url 'registration_register' %}">Join as an individual</a>
-        <a class="button is-rounded is-large is-fullwidth register-teacher">Join as a teacher
+        <a class="button is-rounded is-large is-fullwidth mb-5 register-ind" href="{% url 'registration_register' %}">Sign up for free!</a>
+        <!-- a class="button is-rounded is-large is-fullwidth register-teacher">Join as a teacher
           <span class="overlay-badge">coming soon</span>
-        </a>
+        </a -->
           </div>
           </div>
         </div>
