--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -96,11 +96,20 @@
         {% endblock%}
       </header>
 
-      <div class="messages" style="display:none;">
+      <div class="messages" style="{% if not messages %}display:none;{% endif %}">
         {% for message in messages %}
-        <div class="notification is-{{ message.tags }} is-light">
+        <div class="notification {% if message.tags  == 'error' %}is-danger{% else %}is-{{ message.tags }}{% endif %} is-light">
          <button class="delete"></button>
-         {{ message|safe }}
+         <span class="icon-text">
+          <span class="icon">
+            {% if message.tags == 'success' %}
+            <i class="fad fa-star-shooting"></i>
+            {% elif message.tags == 'error' %}
+            <i class="fad fa-exclamation-triangle"></i>
+            {% endif %}
+          </span>
+          <span>{{ message|safe }}</span>
+        </span>
         </div>
         {% endfor %}
       </div>
@@ -148,6 +157,7 @@
     <script src="{% static "explorer/js/auth.js" %}"  type="text/javascript" ></script>
     <script src="{% static "explorer/js/lottie2.js" %}"  type="text/javascript" ></script>
     <script>
+
     function clear_messages() {
       $('.messages').hide();
       $.getJSON('/api/messages/remove/?callback=serol', function(data){
