--- a/explorer/templates/explorer/missionlist.html
+++ b/explorer/templates/explorer/missionlist.html
@@ -18,7 +18,7 @@
       <h2>{% trans "Mission" %} {{mission.number}}</h2>
       <h3 class="mission-name">{{mission.name|safe}}</h3>
         {% if request.user|user_mission_state:mission.number %}
-        <p><a class="button is-large " href="{% url 'mission' mission.pk %}" role="button" id="mission-btn-{{mission.number}}">
+        <p><a class="button is-large " href="{% url 'challenge-next' mission.number %}" role="button" id="mission-btn-{{mission.number}}">
           {% if mission.pk in active_missions %}
           {% trans "Continue mission" %} &raquo;</a>
           {% else %}
